# prime-parser

./: .gitignore  Makefile  README.md  mock_api_server.py  pyproject.toml
.github/workflows/: build.yaml  deploy.yml  promote.yaml
docker/: .dockerignore  Dockerfile
src/prime_parser/: main.py
src/prime_parser/api/: dependencies.py  routes.py
src/prime_parser/clients/: http_client.py
src/prime_parser/configuration/: settings.py
src/prime_parser/core/: pdf_parser.py
src/prime_parser/models/: domain_models.py
src/prime_parser/utils/: exceptions.py  retry.py
